--- a/RENEW/package.json
+++ b/RENEW/package.json
@@ -21,6 +21,7 @@
     "react-player": "^2.11.0",
     "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.4.2",
+    "react-select": "^5.5.7",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
